--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 <body>
     <div id="container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
+    <script text="javscript/text">
     var global_otp_encode;
 
     jQuery(document).ready(function() {
